# gene_symbol_transformer

./: .envrc  .gitignore  .python-version  Dockerfile  Python_environment.sh  README.md  blast.py  blast_feature_generation.py  blast_features.py  blast_pipeline.py  blast_sequence.sh  compare_assignements.py  compare_assignments.py  configuration.yaml  configuration_mlp.yaml  configuration_transformer.yaml  create_dataset.py  create_orthologs_database.py  data_wrangling.py  dataset_generation.py  download_gene_symbols.pl  environment_setup.sh  evaluate_assignments.py  evaluate_network.py  experiment.yaml  experiment_settings.yaml  explore_data.py  feature_generation.py  fully_connected_pipeline.py  gene_symbol_classifier.py  gene_symbol_classifier_mlp.py  gene_symbol_classifier_transformer.py  gene_symbols.pl  generate_blast_database.sh  generate_dataset.py  generic_pipeline.py  get_gene_symbols.pl  lstm_pipeline.py  mlp_pipeline.py  models.py  (+30 more)
OrthoDB_dataset/: orthologs_database_schema.sql
blast_pipeline/: blast_features.py  blast_sequence.sh  generate_blast_database.sh
dev_scripts/: bsub_jupyter_server.sh  bsub_reverse_proxy.sh  open_bsub_shell.sh  run_jupyter_server.sh  submit_training.sh
gene_symbol_classifier/: blast_pipeline.py  dataset_generation.py  sequence_pipeline.py
more_scripts/: open_bsub_shell.sh  submit_LSF_job.py
notebooks/: README.md  assignments_threshold_statistics.py  assignments_threshold_statistics_plotly.py  dataset.py  exclude_genera_statistics.py  gsc_stats.py  ortholog_groups_Compara.py  real_life_assignments_statistics.py  real_life_assignments_statistics_plotly.py  single_genome_assignments_stats.py  single_genome_assignments_stats_plotly.py
production/: mlp_configuration.yaml  mlp_pipeline.py  open_bsub_shell.sh  production_config.yaml  rapid_release_assignments.py  submit_LSF_job.py
scripts/: mammals_orthologs_one2one.sh  primates_orthologs_one2one.sh  submit_LSF_job.py
tests/: test_gene_symbol_classifier.py
