[tool.poetry]
name = "gene_symbol_classifier"
version = "0.10.0"
description = ""
authors = ["William Stark <william@ebi.ac.uk>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
torch = "^1.9.1"
loguru = "^0.5.3"
pandas = "^1.3.2"
biopython = "^1.79"
PyYAML = "^5.4.1"
tensorboard = "^2.6.0"
ensembl-rest = "^0.3.3"
torchmetrics = "^0.5.0"
PyMySQL = "^1.0.2"
pytorch-lightning = "^1.5.8"

[tool.poetry.dev-dependencies]
pudb = "^2021.1"
icecream = "^2.1.1"
jupyterlab = "^3.1.9"
jupytext = "^1.11.4"
matplotlib = "^3.4.3"
plotly = "^5.2.2"
ipywidgets = "^7.6.3"
scipy = "^1.7.1"
seaborn = "^0.11.2"

[tool.isort]
profile = "black"
multi_line_output = 3
lines_after_imports = 2
lines_between_types = 1

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
