[tool.poetry]
name = "gene_symbol_classifier"
version = "0.12.1"
description = "Gene symbol assignment to protein coding gene sequences using Machine Learning."
authors = ["William Stark <william@ebi.ac.uk>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
torch = "^1.10.2"
pandas = "^1.4.0"
biopython = "^1.79"
PyYAML = "^5.4.1"
tensorboard = "^2.8.0"
ensembl-rest = "^0.3.3"
torchmetrics = "^0.5.1"
PyMySQL = "^1.0.2"
pytorch-lightning = "^1.6.0"

[tool.poetry.dev-dependencies]
pudb = "^2021.2.2"
jupyterlab = "^3.2.8"
jupytext = "^1.13.6"
matplotlib = "^3.5.1"
plotly = "^5.5.0"
ipywidgets = "^7.6.5"
pretty-errors = "^1.2.25"

[tool.isort]
profile = "black"
multi_line_output = 3
lines_after_imports = 2
lines_between_types = 1

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
