[tool.poetry]
name = "gene_symbol_classifier"
version = "0.12.1"
description = "Gene symbol assignment to protein coding gene sequences using Machine Learning."
authors = ["William Stark <william@ebi.ac.uk>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
torch = {url = "https://download.pytorch.org/whl/cu115/torch-1.11.0%2Bcu115-cp39-cp39-linux_x86_64.whl"}
pandas = "^1.4.2"
biopython = "^1.79"
PyYAML = "^5.4.1"
tensorboard = "^2.9.0"
ensembl-rest = "^0.3.3"
torchmetrics = "^0.5.1"
PyMySQL = "^1.0.2"
pytorch-lightning = "^1.6.3"

[tool.poetry.dev-dependencies]
pudb = "^2021.2.2"
jupyterlab = "^3.4.2"
jupytext = "^1.13.8"
matplotlib = "^3.5.2"
plotly = "^5.8.0"
ipywidgets = "^7.7.0"
pretty-errors = "^1.2.25"

[tool.isort]
profile = "black"
multi_line_output = 3
lines_after_imports = 2
lines_between_types = 1

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
